[project]
name = "naba-top"
version = "0.1.0"
description = "App for displaying radio Naba top 10 and top 25 lists for each week, as well as combining the lists into one top 100"
readme = "README.md"
requires-python = ">= 3.14"
authors = [{ name = "Jēkabs Balodis", email = "signalingpigeon@duck.com" }]
dependencies = [
  "babel>=2.18.0",
  "beautifulsoup4[lxml]>=4.14.3",
  "duckdb>=1.4.3",
  "httpx>=0.28.1",
  "polars[pyarrow]>=1.37.1",
  "prefect>=3.6.11",
  "pydantic[email]>=2.12.5",
  "python-dateutil>=2.9.0.post0",
  "streamlit[auth]>=1.54.0",
]

[dependency-groups]
dev = [
  "basedpyright>=1.31.6",
  "pytest>=8.4.2",
  "pytest-coverage>=0.0",
  "ruff>=0.13.2",
  "sqlfluff>=3.5.0",
  "tombi>=0.6.17",
  "ty>=0.0.1a21",
  "typer>=0.24.1",
]

[tool.basedpyright]
pythonVersion = "3.13"
pythonPlatform = "Windows"
typeCheckingMode = "off"
reportUnusedImport = false
reportUnusedVariable = false

[tool.coverage.run]
omit = ["tests/*"]
source = [
  ".",
]

[tool.ruff]
target-version = "py313"

[tool.ruff.format]
quote-style = "single"

[tool.ruff.lint]
select = [
  "E",  # pycodestyle error
  "W",  # pycodestyle warning
  "F",  # pyflakes
  "I",  # isort
  "N",  # pep8 naming
  "UP",  # pyupgrade
  "B",  # flake8-bugbear
  "C4",  # flake8-comprehensions
  "PL",  # pylint
]
ignore = ["PLR2004", "F821"]

[tool.tombi.files]
exclude = [".venv/**"]

[tool.ty.environment]
python-platform = "win32"
python-version = "3.13"

[tool.uv]
required-environments = [
  "sys_platform == 'win32' and platform_machine == 'AMD64'"
]
